# Uno-AI

./: AI.cpp  AI.h  CMakeLists.txt  Card.cpp  Card.h  Player.cpp  Player.h  README.md  TestAI.cpp  TestAI.h  main.cpp  v001.cpp  v001.h  v002.cpp  v002.h  v003.cpp  v003.h  v004.cpp  v004.h  v005.cpp  v005.h  v006.cpp  v006.h  v007.cpp  v007.h  v008.cpp  v008.h
